# countly-sdk-rust

./: Cargo.toml  build.rs  wrapper.h
countly-cpp/include/: adapter.hpp
countly-cpp/src/: adapter.cpp
src/: lib.rs
