[package]
name = "countly-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3.30"
rustc_version = "0.4.0"

[dependencies]
url = "2.5.0"
